# RS06_notepad0

./: LICENSE.txt  README.md
notepad0/: index.html  package.json
notepad0/src/: main.ts
notepad0/src-tauri/: Cargo.toml  tauri.conf.json
notepad0/src-tauri/icons/: icon.icns
notepad0/src-tauri/src/: main.rs
